# pixel-cipher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cliParser.cpp  cliParser.hpp  main.cpp  pixelCipher.cpp  pixelCipher.hpp
include/: cliParser.hpp  pixelCipher.hpp
sandbox/: large.txt
src/: cliParser.cpp  main.cpp  pixelCipher.cpp
